--- a/movpe_app-def_data.archive.yaml
+++ b/movpe_app-def_data.archive.yaml
@@ -1,14 +1,13 @@
 data:  
   m_def: ../upload/raw/movpe_app-def_schema.archive.yaml#MovpeSto_schema 
   users: #section name - not to be filled
-    role: Operator
-    name: Giovanni Giorgio
-    affiliation_institution: CNR
-    address:
-    email:
-    orcid:
-    telephone_number:
+    - "../upload/raw/USER.archive.yaml#data"
+    - "../upload/raw/USER2.archive.yaml#data"
+  #  user:
+  #    role: Operator
+  #    name: Marco
   precursor_sample:
     chemicals:
-      chemical_name: Giovanni Giorgio's special recipe
+      - "../upload/raw/Copper_II_Selenide.archive.json#data"
+      - "../upload/raw/CHEMICAL.archive.yaml#data"
   
