references in movpe app def

--- a/movpe_app-def_data.archive.yaml
+++ b/movpe_app-def_data.archive.yaml
@@ -10,4 +10,6 @@ data:
     chemicals:
       - "../upload/raw/Copper_II_Selenide.archive.json#data"
       - "../upload/raw/CHEMICAL.archive.yaml#data"
+  synthesis:
+    data_file: ELAB-255_NEW-STD_nontested.csv
   
