--- a/movpe_app-def_data.archive.yaml
+++ b/movpe_app-def_data.archive.yaml
@@ -1,14 +1,16 @@
 data:  
   m_def: ../upload/raw/movpe_app-def_schema.archive.yaml#MovpeSto_schema 
   users:
-    - name: Carlo
+    - role: Operator
+      name: Carlo
       affiliation_institution: Leibniz Institut für Kristallzüchtung
       affiliation_group: Model experiment
       address:
       email:
       orcid:
       telephone_number:
-    - name: Giangi
+    - role: Responsible_person
+      name: Giangi
       affiliation_institution: HZB
       affiliation_group: Quantum sensing
       address:
@@ -39,23 +41,23 @@ data:
     roughness:
     d_vert:
     synthesis_step:
-      timestamp:
-      duration:
-      step_number: 2
-      step_title: 
-      step_comment:
-      step_annotation:
-      argon_flow:
-      oxygen_flow:
-      argon_push_titan:
-      argon_purge_titan:
-      vaporization_temperature_titan:
-      chamber_pressure:
-      substrate_temperature_filament: 101
-      shaft_temperature: 101
-      carrier_rotation:
-      peristaltic_pump_rotation_titan:
-      peristaltic_pump_rotation_strontium_lanthan:
-      vaporization_temperature_strontium_lanthan:
-      argon_push_strontium_lanthan: 2
-      argon_purge_strontium_lanthan: 3
+      - timestamp:
+        duration:
+        step_number: 2
+        step_title: 
+        step_comment:
+        step_annotation:
+        argon_flow:
+        oxygen_flow:
+        argon_push_titan:
+        argon_purge_titan:
+        vaporization_temperature_titan:
+        chamber_pressure:
+        substrate_temperature_filament: 101
+        shaft_temperature: 101
+        carrier_rotation:
+        peristaltic_pump_rotation_titan:
+        peristaltic_pump_rotation_strontium_lanthan:
+        vaporization_temperature_strontium_lanthan:
+        argon_push_strontium_lanthan: 2
+        argon_purge_strontium_lanthan: 3
