--- a/hall/Zinc_Selenide.archive.yaml
+++ b/hall/Zinc_Selenide.archive.yaml
@@ -1,9 +1,10 @@
 data:
   #m_def: ../upload/raw/chemical_schema.archive.yaml#/definitions/section_definitions/0
-  m_def: ../upload/raw/hall.schema.archive.yml#/definitions/section_definitions/2
-  chemical_name: ZnSe
+  m_def: ../upload/raw/hall.schema.archive.yaml#/definitions/section_definitions/2
+  name: ZnSe
   iupac_name: Zinc Selenide
   supplier: Sigma Aldrich
-  state_or_phase: powder
   comment: "my chemical description"
+  # composition:
+  #   - name: Zn
   
