--- a/FZ_IKZ/fz_IKZ.data.archive.yaml
+++ b/FZ_IKZ/fz_IKZ.data.archive.yaml
@@ -1,6 +1,6 @@
 # example data file for Float zone process at IKZ
 data:  
-  m_def: ../upload/raw/fz_IKZ_PROCESS.archive.yaml#FZ_IKZ_schema
+  m_def: ../upload/raw/fz_IKZ.schema.archive.yaml#FZ_IKZ_schema
   user: #section name - not to be filled
     - role: Operator , siupervisors
       name: Iryna
@@ -20,3 +20,6 @@ data:
     reflector:
       reflector_id: 2
       reflector_inductor_position: 0.1
+  process:
+    digital_protocol:
+      data_file: FZ.xlsx
